ファイル編集お試し

--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,8 @@
 	<body>
 		<h1>Hello World !</h1>
 		<p>Git利用サンプル</p>
+		<p>Git利用サンプル</p>
+		<p>Git利用サンプル</p>
+		<p>Git利用サンプル</p>
 	</body>
 </html>
